# Falcon

./: .gitignore  .gitmodules.swn  .gitmodules.swo  CMakeLists.txt  README.md  README_CN.md  README_batch.md  benchmark.cpp
test/: CDF_test.cpp  CMakeLists.txt  Falcon_basic_test.cpp  Falcon_test.cu  Falcon_test_br.cu  Falcon_test_muti_steam_f64.cu  Falcon_test_nopack.cu  Falcon_test_spare.cu  GDF_test.cpp  GDF_test.cu  GDF_test.h  GDF_test_br.cu  GDF_test_muti_steam_f64 copy.cpp  GDF_test_muti_steam_f64.cpp  GDF_test_muti_steam_f64.cu  GDF_test_muti_steam_opt_f64 copy.cu  GDF_test_muti_steam_opt_f64.cu  GDF_test_nopack.cu  GDF_test_nopack_simple.cu  GDF_test_spare.cu  GDF_test_string.cu  benchmark.cpp  benchmark.cu  muti_type1.cu  muti_type2.cu  muti_type_3step_block.cu  muti_type_3step_noblock copy.cu  muti_type_3step_noblock.cu  test_0.cu  test_ALP.cpp  test_ALP_GPU.cu  test_ALP_GPU_v2.cu  test_ALP_g.cu  test_LZ4.cu  test_Snappy.cpp  test_bitcomp.cu  test_chimp.cpp  test_compression.cpp  test_compression.h  test_cuSZp.cpp  (+22 more)
test/baseline/ALP/: CMakeLists.txt
test/baseline/ALP-G/: CMakeLists.txt
test/baseline/ALP-G/src/flsgpu/: alp.cuh
test/baseline/ALP/ALP_src/: CmakeLists.txt
test/baseline/ALP/include/alp/: common.hpp  config.hpp  decoder.hpp  encoder.hpp
test/baseline/ALP/src/: CMakeLists.txt
test/baseline/ALP_g/: CMakeLists.txt  alp_gpu.hpp  alp_gpu_new.cu  alp_gpu_new.hpp
test/baseline/ALP_g/ALP/include/: alp.hpp
test/baseline/ALP_g/ALP/src/: falp.cpp
test/baseline/ALP_g/include/: alp_gpu.hpp
test/baseline/ALP_g/src/: alp_gpu.cu  alp_gpu_hybrid.cu
test/baseline/chimp128/: CMakeLists.txt
test/baseline/cuSZp/: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
test/baseline/cuSZp/cmake/: Installing.cmake
test/baseline/cuSZp/examples/: CMakeLists.txt  GDFC_test_f32.cpp  cuSZp.cpp  cuSZp_test_f32.cpp  cuSZp_test_f64.cpp  cuSZp_test_muti_steam_f64.cpp
test/baseline/cuSZp/include/: cuSZp.h
test/baseline/cuSZp/include/cuSZp/: cuSZp_entry_f32.h  cuSZp_entry_f64.h  cuSZp_kernels_f32.h  cuSZp_kernels_f64.h  cuSZp_timer.h  cuSZp_utility.h
test/baseline/cuSZp/python/: example-hpc.py  example-torch.py  pycuSZp.py
test/baseline/cuSZp/src/: cuSZp.code-workspace  cuSZp.cu  cuSZp_entry_f32.cu  cuSZp_entry_f64.cu  cuSZp_kernels_f32.cu  cuSZp_kernels_f64.cu  cuSZp_timer.cu  cuSZp_utility.cu
test/baseline/elf/: CMakeLists.txt  ElfCompressor.cpp  ElfCompressor32.cpp  ElfDecompressor.cpp  ElfDecompressor32.cpp  defs.h  elf.h  utils.cc
test/baseline/elf_star/: CMakeLists.txt  ElfStarCompressor.cpp  ElfStarCompressor32.cpp  ElfStarDecompressor.cpp  ElfStarDecompressor32.cpp  defs.h  elf_star.h  elf_star_32.h  utils.cc
test/baseline/elf_star/BitStream/: BitReader.h  BitWriter.h
test/baseline/elf_star/utils/: array.h  input_bit_stream.cc  input_bit_stream.h  output_bit_stream.cc  output_bit_stream.h  post_office_result.h  post_office_solver.cc  post_office_solver.h  post_office_solver_32.cc  post_office_solver_32.h
test/baseline/elf_star_g/: CMakeLists.txt  ElfStarComHost.cu  ElfStarComHost_32.cu  ElfStarComKernel.cu  ElfStarComKernel_32.cu  ElfStarDecHost.cu  ElfStarDecHost_32.cu  ElfStarDecKernel.cu  ElfStarDecKernel_32.cu  Elf_Star_g_Kernel.cuh  Elf_Star_g_Kernel_32.cuh  defs.cuh  defs32.cuh  test_elf_star.cu
test/baseline/elf_star_g/BitStream/: BitDefine.cuh  BitReader.cuh  BitWriter.cuh
test/baseline/elf_star_g/utils/: post_office_solver.cu  post_office_solver.cuh  post_office_solver32.cu  post_office_solver32.cuh
test/baseline/mpc/: MPC_float_12.cu  README.md
test/baseline/ndzip/: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compress
test/baseline/ndzip/.github/workflows/: ndzip_ci.yml
test/baseline/ndzip/SplitConfiguration/ndzip/: cpu_encoder-1.cc  cpu_encoder-2.cc  cpu_encoder-3.cc  cpu_encoder-4.cc  cpu_encoder-5.cc  cpu_encoder-6.cc
test/baseline/ndzip/SplitConfiguration/ndzip-cuda/: cuda_encoder-1.cu  cuda_encoder-2.cu  cuda_encoder-3.cu  cuda_encoder-4.cu  cuda_encoder-5.cu  cuda_encoder-6.cu
test/baseline/ndzip/ci/: find-unformatted-files.sh  run-unit-tests.sh
test/baseline/ndzip/cmake/: SplitConfiguration.cmake
test/baseline/ndzip/contrib/fpc/: CMakeLists.txt  README.md  fpc.c  fpc.h
test/baseline/ndzip/contrib/fpzip/: .gitignore  CMakeLists.txt  Config  LICENSE  README.md  VERSIONS.md  fpzip-config-version.cmake.in
test/baseline/ndzip/contrib/gfc/: CMakeLists.txt  GFC_22.cu  GFC_22.h  README.md
test/baseline/ndzip/contrib/mpc/: CMakeLists.txt  MPC_12.h  MPC_double_12.cu
test/baseline/ndzip/contrib/nvcomp/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
test/baseline/ndzip/contrib/pfpc/: CMakeLists.txt  README.md  pFPC.c  pFPC.h
test/baseline/ndzip/contrib/spdp/: CMakeLists.txt  README.md  SPDP_11.c  SPDP_11.h
test/baseline/ndzip/contrib/zfp/: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Config  LICENSE  README.md  VERSIONS.md  appveyor.sh  appveyor.yml  codecov.yml  setup.py  travis.sh  zfp-config-version.cmake.in  zfp-config.cmake.in
test/baseline/ndzip/dev/: gpu_hc_access.py
test/baseline/ndzip/docs/: benchmarking.md
test/baseline/ndzip/include/ndzip/: cuda.hh  ndzip.hh  offload.hh  sycl.hh
test/baseline/ndzip/src/benchmark/: benchmark.cc  plot_benchmark.py
test/baseline/ndzip/src/compress/: compress.cc
test/baseline/ndzip/src/io/: io.cc  (+1 more)
test/baseline/ndzip0/: CMakeLists.txt
test/baseline/patas/: CMakeLists.txt  byte_reader.hpp  byte_writer.hpp  chimp_utils.hpp  duckdb_types.h  packed_data.hpp  patas.hpp  ring_buffer.hpp
test/data/: count.py  dataset_utils.cpp  dataset_utils.hpp  deal.py  process.py
test/data/divide_data/: divide  divide.cpp
test/data/float/: Air-pressure.csv  Air-sensor.csv  Basel-temp.csv  Basel-wind.csv  Bird-migration.csv  Bitcoin-price.csv  City-temp.csv  Dew-point-temp.csv  IR-bio-temp.csv  PM10-dust.csv  Stocks-DE.csv  Stocks-UK.csv  Stocks-USA.csv  Wind-Speed.csv  test_0.csv  test_3.csv
test/data/wrong/: Bitcoin-price.csv
test/learn/: add_test.cpp  test_add
(+828 files in other folders)
